--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,12 @@
         <dependency>
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth2</artifactId>
-        </dependency>               
+        </dependency> 
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version> <!-- makesure correct version here -->
+        </dependency>              
     </dependencies>
 	
 	
