--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@
 # and open the template in the editor.
 # Database
 db.driver: org.postgresql.Driver
-db.url: jdbc:postgresql://localhost:5432/basetdc
-db.username: poo2015
-db.password: poo2015
+db.url: jdbc:postgresql://ec2-54-225-223-40.compute-1.amazonaws.com:5432/ddv790j1sf1apk?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
+db.username: mlfmjrnbnbbidl
+db.password: pJVM5uULD-axuOFX5Gk1T0W0lg
 
 # Hibernate
 hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
