sql true, para ver consultas hechas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ db.username: poo2015
 db.password: poo2015
 # Hibernate
 hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
-hibernate.show_sql: false
+hibernate.show_sql: true
 hibernate.hbm2ddl.auto: update
 entitymanager.packagesToScan: com.ar.dev.tierra.api
