cambios para decimales y precision en precios

--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,16 @@
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
-            <version>1.3.1</version> <!-- makesure correct version here -->
-        </dependency>        
+            <version>1.3.1</version> 
+        </dependency>
+        <!-- makesure correct version here 
+        <dependency>
+            <groupId>hlf.argentina</groupId>
+            <artifactId>hlf.argentina</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/HasarFiscalLibreria.jar</systemPath>
+        </dependency>  -->     
     </dependencies>
     <build>
         <plugins>
