configuracion para el template inicial

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql: true
 hibernate.hbm2ddl.auto: update
 entitymanager.packagesToScan: com.ar.dev.tierra.api
+#Thymeleaf configuration
+spring.thymeleaf.cache: false
