--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,17 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 # Database
-db.driver: org.postgresql.Driver
-db.url: jdbc:postgresql://ec2-54-225-223-40.compute-1.amazonaws.com:5432/ddv790j1sf1apk?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
-db.username: mlfmjrnbnbbidl
-db.password: pJVM5uULD-axuOFX5Gk1T0W0lg
-#db.url: jdbc:postgresql://localhost:5432/basetdc
-#db.username: poo2015
-#db.password: poo2015
-# Hibernate
 hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql: true
 hibernate.hbm2ddl.auto: update
+db.driver: org.postgresql.Driver
+#db.url: jdbc:postgresql://ec2-54-225-223-40.compute-1.amazonaws.com:5432/ddv790j1sf1apk?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
+db.url: jdbc:postgresql://localhost:5432/basetdc
+#db.username: mlfmjrnbnbbidl
+db.username: paulogaldo
+#db.password: pJVM5uULD-axuOFX5Gk1T0W0lg
+db.password: 30169260
+# Hibernate
 entitymanager.packagesToScan: com.ar.dev.tierra.api
 #Thymeleaf configuration
 spring.thymeleaf.cache: false
