configuracion de bd restaurada a aws

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,12 @@ hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql: true
 hibernate.hbm2ddl.auto: update
 db.driver: org.postgresql.Driver
-#db.url: jdbc:postgresql://ec2-54-225-223-40.compute-1.amazonaws.com:5432/ddv790j1sf1apk?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
-db.url: jdbc:postgresql://localhost:5432/basetdc
-#db.username: mlfmjrnbnbbidl
-db.username: paulogaldo
-#db.password: pJVM5uULD-axuOFX5Gk1T0W0lg
-db.password: 30169260
+db.url: jdbc:postgresql://ec2-54-225-223-40.compute-1.amazonaws.com:5432/ddv790j1sf1apk?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
+#db.url: jdbc:postgresql://localhost:5432/basetdc
+db.username: mlfmjrnbnbbidl
+#db.username: paulogaldo
+db.password: pJVM5uULD-axuOFX5Gk1T0W0lg
+#db.password: 30169260
 # Hibernate
 entitymanager.packagesToScan: com.ar.dev.tierra.api
 #Thymeleaf configuration
